# quantbot

./: .env.example  .gitignore  Cargo.toml  JOURNAL.md  PROGRESS.md  QWEN.md  README.md  STRATEGY.md  config.ab-directional.toml  config.ab-protective.toml  config.ablation-forex-off.toml  config.control-gold075.toml  config.example.toml  config.kronos.toml  config.paper-test.toml  pyproject.toml  quantbot.service
eval_results/: round1_BTC-USD.csv  round1_ES=F.csv  round1_GC=F.csv  round1_SPY.csv
eval_results/deepseek/: round1_AUDUSD=X.csv  round1_BNB-USD.csv  round1_BTC-USD.csv  round1_CL=F.csv  round1_EEM.csv  round1_EFA.csv  round1_ES=F.csv  round1_ETH-USD.csv  round1_EURUSD=X.csv  round1_GBPUSD=X.csv  round1_GC=F.csv  round1_GLD.csv  round1_IWM.csv  round1_NQ=F.csv  round1_QQQ.csv  round1_SOL-USD.csv  round1_SPY.csv  round1_TLT.csv  round1_USDCHF=X.csv  round1_USDJPY=X.csv  round1_ZB=F.csv
eval_results/deepseek-r1-distill-mean-reversion/: round1_BTC-USD.csv  round1_ES=F.csv  round1_GC=F.csv  round1_SPY.csv
eval_results/finr1/: round1_AUDUSD=X.csv  round1_BNB-USD.csv  round1_BTC-USD.csv  round1_CL=F.csv  round1_EEM.csv  round1_EFA.csv  round1_ES=F.csv  round1_ETH-USD.csv  round1_EURUSD=X.csv  round1_GBPUSD=X.csv  round1_GC=F.csv  round1_GLD.csv  round1_IWM.csv  round1_NQ=F.csv  round1_QQQ.csv  round1_SOL-USD.csv  round1_SPY.csv  round1_TLT.csv  round1_USDCHF=X.csv  round1_USDJPY=X.csv  round1_ZB=F.csv
eval_results/qwen3/: round1_AUDUSD=X.csv  round1_BNB-USD.csv  round1_BTC-USD.csv  round1_CL=F.csv  round1_EEM.csv  round1_EFA.csv  round1_ES=F.csv  round1_ETH-USD.csv  round1_EURUSD=X.csv  round1_GBPUSD=X.csv  round1_GC=F.csv  round1_GLD.csv  round1_IWM.csv  round1_NQ=F.csv  round1_QQQ.csv  round1_SOL-USD.csv  round1_SPY.csv  round1_TLT.csv  round1_USDCHF=X.csv  round1_USDJPY=X.csv  round1_ZB=F.csv
lib/scripts/: download_data.py  eval_finr1_252d.sh  eval_round1.py  fill_forecast_cache.py  kronos_sidecar_stub.py  sglang_eval.sh  sglang_setup.sh  test_phase2.py
lib/tests/: test_backtest.py
prompts/: indicator_directional.md
quantbot/: config.py
quantbot/backtest/: engine.py  metrics.py
quantbot/data/: provider.py  (+1 more)
scripts/: analyze_eval.py  download_data.py  eval_all_models.sh  eval_round1.py  install_systemd.sh  run_backtest.py  sglang_eval.sh  sglang_serve.slurm  sglang_serve_finr1.slurm  sglang_serve_qwen3_32b.slurm  simulate_combiner.py
src/: audit.rs  config.rs  db.rs  forecast.rs  lib.rs  main.rs  notify.rs  recording.rs
tests/: ig_demo_roundtrip.rs  test_tsmom.py  validate_sharpe.rs
(+80 files in other folders)
