[package]
name = "quantbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
csv = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
