[package]
name = "quantbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
csv = "1"
clap = { version = "4", features = ["derive", "env"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
mockito = "1"
