[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantbot"
version = "0.1.0"
description = "Hybrid multi-agent trading system combining quant rules with LLM agents"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.30",
    "plotly>=5.18",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scipy>=1.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
llm = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.2",
]
exchange = ["ccxt>=4.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
talib = ["TA-Lib>=0.4.28"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]
all = ["quantbot[llm,exchange,web,talib,dev]"]

[project.scripts]
quantbot-backtest = "scripts.run_backtest:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
